Added Cart And Strore Product in it.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  provider: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,12 +62,12 @@ flutter:
   fonts:
     - family: Lato
       fonts:
-        - asset: lib\assets\fonts\Lato-Regular.ttf
-        - asset: lib\assets\fonts\Lato-Bold.ttf
+        - asset: assets\fonts\Lato-Regular.ttf
+        - asset: assets\fonts\Lato-Bold.ttf
           weight: 800
     - family: Anton
       fonts:
-        - asset: lib\assets\fonts\Anton-Regular.ttf
+        - asset: assets\fonts\Anton-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
